# gstreamer-zstd-plugin

./: README.md  gstzstddec.h  meson.build  test.txt  test_output.txt
src/: gstzstddec.c  meson.build
